add nomenclature_service methods and new routes (only get method is working properly)
